<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App General -->
    <string name="app_name">MyBooksAndMovies</string>
    <string name="app_id">537150076346783</string>
    <string name="tmp_desc">TMP_DESCRIPTION</string>
    <string name="details">Details</string>
    <string name="progress_share">"Sharing "</string>
    <string name="progress_wait">Please wait...</string>
    <string name="progress_sign_in">Signing in...</string>
    <string name="empty">No results found</string>
    <string name="empty_data">No data</string>
    <string name="no_title">[No Title]</string>
    <string name="books_sync">Books synchronization</string>
    <string name="movies_sync">Movies synchronization</string>
    <string name="sync_progress">Synchronization in progress</string>
    <string name="sync_end">Synchronization completed</string>
    
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    
    <string name="movie">Movie</string>
    <string name="book">Book</string>
    
    <string name="import_confirmation">Import database from backup? It will erase all data.</string>
    <string name="import_title">Import from backup</string>
    <string name="sync_complete">Sync completed!!!</string>

    <!-- Menù/ActionBar -->
    <string name="action_backup">Backup</string>
    <string name="action_import">Import backup</string>
    <string name="action_import_csv">Import CSV</string>
    <string name="action_export_csv">Export CSV</string>
    <string name="action_sync_doc">Sync</string>
    <string name="action_sync_all">Sync all</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Stats</string>
    <string name="action_search">Search</string>
    <string name="action_search_web">Search Online</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_share">Share</string>
    <string name="action_newdlist">New list</string>
    <string name="action_create">Create</string>
    <string name="shareAsText">As text</string>
    <string name="facebook">Facebook</string>
    <string name="googleplus">Google+</string>

    <!-- Hints -->
    <string name="search_hint">Search for docs</string>
    <string name="newdlist_hint">List name</string>

    <!-- Toast Messages -->
    <string name="dlist_added">List Added</string>
    <string name="dlist_void_name">Invalid list name</string>
    <string name="no_connetions">No connections are available</string>
    <string name="doc_deleted">" deleted"</string>
    <string name="doc_saved">" saved successfully"</string>
    <string name="error">Error</string>
    <string name="doc_shared">Document shared successfully</string>
    <string name="pending_share">There is a pending sharing action, please wait </string>
    <string name="import_begin">Import started</string>
    <string name="import_end">Import successful</string>
    <string name="export_success">CSV exported in Download folder</string>
    <string name="export_error">Error during export</string>
    <string name="backup_error">Error during backup</string>
    <string name="backup_success">Backup completed successfully</string>
    <string name="import_b_error">Error during import from backup</string>
    <string name="import_b_success">Successful import from backup</string>
    
    <!-- Swipey_Tabs-->
    <string name="dlists">Lists</string>
    <string name="titles">Titles</string>
    <string name="authors">Authors</string>
    <string name="directors">Directors</string>
    <string name="genres">Genres</string>

    <!-- Doc Details -->
    <string name="rating">Rating</string>
    <string name="web">Web</string>
    <string name="yours">You</string>
    <string name="pages">" pages"</string>
    <string name="daration">Duration</string>
    <string name="min">" min"</string>
    
    <!-- Add Activity -->    
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="isbn_upc">ISBN/UPC</string>
    <string name="select_lists">Lists</string>
    <string name="select_genres">Genres</string>
    <string name="note_message">Add other info here</string>
    <string name="rating_box">/100</string>
    <string name="confirmation_msg">Delete this document?</string>
    <string name="field_required">Required</string>
    
    <!-- Stats -->
    <string name="s_num_doc">" documents in you collection."</string>
    <string name="s_num_books">" books."</string>
    <string name="s_num_cats">" categories."</string>
    <string name="s_num_movies">" movies."</string>
    <string name="s_avg_rating_b">"Books average rating: "</string>
    <string name="s_avg_rating_m">"Movies average rating: "</string>
    
    <string name="movies">Movies</string>
    <string name="books">Books</string>

    <!-- DLists -->
    <string name="watched">Watched</string>
    <string name="towatch">ToWatch</string>
    <string name="read">Read</string>
    <string name="toread">ToRead</string>

    <!-- Genres -->
    <string name="action">Action</string>
    <string name="drama">Drama</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="comedies">Comedies</string>
    <string name="crime">Crime</string>
    <string name="thrillers">Thrillers</string>
    <string name="fantasy">Fantasy</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="horror">Horror</string>
    <string name="sport">Sport</string>
    <string name="westerns">Westerns</string>
    <string name="war">War</string>
    <string name="history">History</string>
    <string name="documentaries">Documentaries</string>
    <string name="musicals">Musicals</string>
    <string name="adult">Adult</string>

    <string-array name="menu_spinner">
        <item>Movies</item>
        <item>Books</item>
    </string-array>
    
    <!-- Settings -->
    <string name="backup_and_import">Backup and Import</string>
    <string name="backup">Backup</string>
    <string name="import_backup">Import backup</string>
    <string name="personal">Personal</string>
    <string name="username">Username</string>
    <string name="theme_summary">Default light blue button and title strips</string>
    <string name="theme_title">Theme color</string>
    
    <string name="help">Help</string>
    <string name="device">Device</string>
    <string name="wifi_summary">On mobile network your carrier may charge more for data usage</string>
    <string name="wifi_title">Download over Wi-Fi only</string>
    <string name="feedback_title">Send anonymous feedback</string>
    <string name="deafault_settings">Default system setting</string>
    <string name="rotate_screen_title">Auto-rotate screen</string>
    
    <string-array
        name="rotate_option">
        <item>Standard system settings</item>
<!--         <item>Look in portrait</item> -->
<!--         <item>Look in landscape</item> -->
    </string-array>
    <string name="default_rotate_option">Standard system settings</string>
    
    <string-array
        name="theme_color">
        <item>Default</item>
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Pink</item>
    </string-array>
    
    <string name="default_theme_color">Default</string>
	<string name="default_username">Username</string>
</resources>
