<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_social_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share">
        <menu>
            <item android:id="@+id/share_facebook"
                  android:icon="@drawable/facebook"
                  android:title="@string/facebook" />
            <item android:id="@+id/share_google"
                  android:icon="@drawable/google"
                  android:title="@string/googleplus" />
            <item android:id="@+id/share_astext"
                  android:icon="@drawable/mail"
                  android:title="@string/shareAsText" />
        </menu>
        </item>
        <item
        android:id="@+id/action_sync_doc"
        android:icon="@drawable/ic_sync"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync_doc" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_search_web"
        android:showAsAction="never"
        android:title="@string/action_search_web"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abs__ab_share_pack_holo_dark"
        android:title="@string/action_settings">
    </item>

</menu>