<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    
    <item
        android:id="@+id/action_newdlist"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="@string/action_newdlist"/>
    
    
    <item
        android:id="@+id/action_import_csv"
        android:showAsAction="never"
        android:title="@string/action_import_csv" />
    
    <item
        android:id="@+id/action_export_csv"
        android:showAsAction="never"
        android:title="@string/action_export_csv" />
    
    <item
        android:id="@+id/action_stats"
        android:showAsAction="never"
        android:title="@string/action_stats" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abs__ab_share_pack_holo_dark"
        android:title="@string/action_settings"/>

</menu>
