<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F5F5F5"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/barcode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_scanbarcode"
                style="?android:attr/buttonStyleToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@xml/blue_button"
                android:textColor="@android:color/white"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="scanBarcode"
                android:text="@string/scan_barcode" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/isbn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/isbn_upc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/isbn_upc" />

            <Button
                android:id="@+id/button_searchisbn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:background="@xml/blue_button"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:onClick="searchByISBN"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/action_search"
                android:layout_margin="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal" >

            <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
            android:ems="10"
            android:hint="@string/title" />

            <Button
                android:id="@+id/button_searchbytitle"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@xml/blue_button"
                android:onClick="searchByTitle"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/action_search"
                android:layout_margin="2dp" />
        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/author" />
        
        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year" 
            android:inputType="number" />
        
        <AutoCompleteTextView
             android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genre" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkBox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toread" />

            <CheckBox
                android:id="@+id/checkBox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read" />

            <Button
                android:id="@+id/button_selectlists"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:onClick="showLists"
                android:layout_height="wrap_content"
                android:background="@xml/blue_button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="20dp"
                android:text="@string/select_lists" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/rating_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/rating_box"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/note_message" />
    </LinearLayout>

</ScrollView>